Class implementation and tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
 	"compilerOptions": {
 		"experimentalDecorators": true,
 		"allowJs": true,
-		"target": "ES6",
+        "target": "ES6",
+        "moduleResolution": "node"
 		// "downlevelIteration": true
 	}
 }
